Fix: sticky dates

--- a/front/index.html
+++ b/front/index.html
@@ -9,6 +9,7 @@
       html, body {
           margin: 0;
           padding: 0;
+          overflow: initial !important;
       }
       body {
           font-size: 15px;
@@ -23,7 +24,7 @@
       }
     </style>
     <link href="https://a.slack-edge.com/bv1-8/slack-icons-v2-40cccfd.woff2" rel="preload" as="font" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-8/client-boot-styles.278ccb0.css?cacheKey=gantry-1602294171" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-8/client-boot-styles.57e47b5.css" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
