--- a/back/public/index.html
+++ b/back/public/index.html
@@ -23,8 +23,9 @@
           box-sizing: border-box;
       }
     </style>
-    <link href="https://a.slack-edge.com/bv1-8/slack-icons-v2-40cccfd.woff2" rel="preload" as="font" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-8/client-boot-styles.57e47b5.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-10/client-boot-styles.82a58f4.min.css?cacheKey=gantry-1674776250" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-10/slack-kit-styles.b2b0c56.min.css?cacheKey=gantry-1674776250" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
   </head>
   <body>
     <div id="app"></div>
