--- a/front/index.html
+++ b/front/index.html
@@ -23,9 +23,9 @@
           box-sizing: border-box;
       }
     </style>
-    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-9/client-boot-styles.293c5a4.css?cacheKey=gantry-1613184053" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-10/client-boot-styles.82a58f4.min.css?cacheKey=gantry-1674776250" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-10/slack-kit-styles.b2b0c56.min.css?cacheKey=gantry-1674776250" crossorigin="anonymous" />
     <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
-    <link href="https://a.slack-edge.com/bv1-9/slack-icons-v2-16ca3a7.woff2" rel="preload" as="font" crossorigin="anonymous" />
   </head>
   <body>
     <div id="app"></div>
